# RATS-web

./: .envdev  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
RATS/: Dockerfile  docker-entrypoint.sh  manage.py  pyproject.toml
RATS/RATS/: settings.py
RATS/contests/migrations/: 0001_initial.py  0002_initial.py
RATS/problems/: models.py
app/: main.py  settings.py
app/api/: auth.py  contests.py  problems.py  solutions.py
app/database/: models.py  session.py
app/schemas/: auth.py  contest.py  jwt.py  problem.py  schemas.py  solution.py
app/service/: jwt.py  queue.py
web/: .envdev  Dockerfile  pyproject.toml
web/RATS/: asgi.py  settings.py  urls.py  wsgi.py
web/contests/: models.py
web/contests/migrations/: 0003_alter_contests_id.py
web/problems/: models.py
web/problems/migrations/: 0001_initial.py  0002_initial.py  0003_problems_memory_limitation_problems_time_limitation_and_more.py  0004_alter_problems_id_alter_solves_id_alter_tests_id_and_more.py  0005_rename_solves_solutions.py
web/problems/services/: queue_interface.py
web/profiles/: models.py
web/profiles/migrations/: 0001_initial.py  0002_alter_users_id.py
