[tool.poetry]
name = "rats-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.25"
alembic = "^1.13.1"
psycopg-binary = "^3.1.17"
asyncpg = "^0.29.0"
fastapi = "^0.108.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
httpx = "^0.26.0"
greenlet = "^3.0.3"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
