[tool.poetry]
name = "rats"
version = "0.1.0"
description = ""
authors = ["Beaver <beavernotacat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-environ = "^0.11.2"
psycopg-binary = "^3.1.16"
psycopg = "^3.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
